# ShackMasterS3

./: CMakeLists.txt  README.md  partitions.csv
main/: CMakeLists.txt  Kconfig.projbuild  appevents.h  definitions.h  httpserver.c  httpserver.h  idf_component.yml  index.html  main.c  rbg_led.c  rgb_led.h  setup.html  usbhost.c  usbhost.h  wifi.c  wifi.h
